# marty

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
benchmarks/: README.md  justfile
benchmarks/complex/: README.md  RESULTS-SNAPSHOTS.md  docker-compose.yml  justfile  smoke-cgi.hurl  smoke.hurl
benchmarks/complex/docker/: Dockerfile  apache-bench.conf
benchmarks/complex/go-complex/: go.mod  main.go
benchmarks/complex/marty-complex/: Cargo.toml
benchmarks/complex/marty-complex/src/: compute.rs  main.rs  salt.rs  timing.rs
benchmarks/complex/php/: complex.php
benchmarks/complex/python-complex/: complex.py
benchmarks/complex/scripts/: docker-down.sh  docker-lib.sh  install-cgi-local.sh  profile-cgi.sh  run-bench-fair.sh
benchmarks/simple/: README.md  docker-compose.yml  justfile  smoke-cgi.hurl  smoke.hurl
benchmarks/simple/docker/: Dockerfile  apache-bench.conf
benchmarks/simple/fixtures/: webhook-post.json
benchmarks/simple/go-webhook/: go.mod  main.go
benchmarks/simple/load/drill/: go.yml  marty.yml  php.yml  python.yml
benchmarks/simple/marty-webhook/: Cargo.toml
benchmarks/simple/marty-webhook/src/: main.rs
benchmarks/simple/php/: webhook.php
benchmarks/simple/python-webhook/: webhook.py
benchmarks/simple/scripts/: ensure-hey.sh  install-cgi-local.sh  run-bench-drill.sh  run-bench-fair.sh  run-bench.sh
examples/: apache-combined-vhost.htaccess.in
examples/01_basic/: Cargo.toml  htaccess.basic.in  justfile  linux.just  smoke.hurl
examples/01_basic/src/: main.rs
examples/02_routing/: Cargo.toml  htaccess.basic.in  justfile  linux.just  smoke.hurl
examples/02_routing/src/: main.rs
examples/03_session/: Cargo.toml  htaccess.basic.in  justfile  linux.just  smoke.hurl
examples/03_session/src/: main.rs
examples/04_cookies/: Cargo.toml  htaccess.basic.in  justfile  linux.just  smoke.hurl
examples/04_cookies/src/: main.rs
examples/05_sqlite/: Cargo.toml  htaccess.basic.in  justfile  linux.just  smoke.hurl
examples/05_sqlite/src/: main.rs
examples/_http-cgi-server/: Cargo.toml
examples/_http-cgi-server/src/: main.rs
examples/sample-cgi-script/: Cargo.toml
examples/sample-cgi-script/src/: main.rs
marty/: Cargo.toml
marty/src/: lib.rs  request.rs  response.rs  tower.rs
scripts/: cgi-example-smoke.sh
