[package]
name = "marty-01-basic"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Marty example 01_basic: minimal CGI script that writes a fixed CGI response (no Tower, no serve_cgi, no async runtime)."

[dependencies]
bytes = "1"
hyper = "1"
marty = { path = "../../marty" }
