[package]
name = "marty-05-sqlite"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Marty example 05_sqlite: rusqlite + Axum behind serve_cgi."

[dependencies]
axum = "0.8"
marty = { path = "../../marty", features = ["tower"] }
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
