[package]
name = "marty-webhook-bench"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Marty benchmark: minimal Stripe-style webhook ack behind serve_cgi."

[dependencies]
axum = "0.8"
marty = { path = "../../../marty", features = ["tower"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
